@@ -1,3 +1,8 @@
+2008-02-28  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Core.Gui.Components/FileBrowser.cs: Added missing shortcut
+	  strings
+
 2008-02-25  Geoff Norton  <gnorton@novell.com>
 
 	* MonoDevelop.Core.Gui/MonoDevelop.Core.Gui/PlatformService.cs: Add mime
